--- a/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/style.scss
@@ -1,5 +1,5 @@
 //Andrew Start
-:root{
+:root {
     --color-dark-grey: #22282c;
     --color-mid-grey: #2E3137;
     --color-light-grey: #383C3F;
@@ -15,144 +15,246 @@
     color: var(--color-white);
     font-family: Arial, Helvetica, sans-serif;
 }
-.header{
+
+.header {
     display: flex;
     justify-content: space-between;
-    &__icon{
+
+    &__icon {
         border: 1px solid var(--color-light-grey);
         border-radius: 5px;
         width: 30px;
         height: 30px;
+        background-color: var(--color-dark-grey);
     }
-    &__item{
-        border-radius: 5px;
-    }
-}
-.wallet-banner{
-    display: flex;
-    height: 25px;
-    &__item{
-        border-radius: 5px;
-        background-color: var(--color-light-grey);
-    }
-}
-.wallet-value{
-    width: 600px;
-    height: 600px;
-    position: relative;
-    &__avrage{
-        position: absolute;
-        top: 0px;
-        left: 0px;
-    }
-    &__max{
-        position: absolute;
-        top: 0px;
-        right: 0px;
-        font-weight: 900;
-        &::after{
-            position: absolute;
-            content: 'MAX 24H';
-            top: 1.7em;
-            right: 0px;
-            font-weight: 100;
-            color: var(--color-lighter-grey);
-        }
-    }
-    &__graph{
+
+    &__item {
+        color: var(--color-white);
         
+        border-radius: 5px;
+        background-color: var(--color-dark-grey);
+    }
+}
+
+.wallet {
+    width: 640px;
+    margin: 15px;
+    &-banner {
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        border: 3px solid var(--color-red);
-        border-radius: 50%;
+        height: 70px;
+        width: 800px;
+        &__item {
+            border-radius: 5px;
+            background-color: var(--color-light-grey);
+            margin: 1rem;
+            width: 50ch;
+            text-align: center;
+            padding-block: 0.6em;
+        }
+    }
+
+    &-value {
+        width: 600px;
         height: 600px;
-        h1{
-            position: relative;
-            &::before{
-                content: 'WALLET VALUE';
-                width: 22ch;
-                position: absolute;
+        position: relative;
+
+        &__avrage {
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            word-spacing: 0.7em;
+            span{
                 color: var(--color-lighter-grey);
-                bottom: 3em;
-                text-align: center;
-                font-size: 0.5em;
-            }
-            &::after{
-                content: '▲ € 31.800,52 (21,1%)';
-                width: 20ch;
-                position: absolute;
-                font-size: 0.5em;
-                color: var(--color-light-green);
-                top: 3em;
-                text-align: center;
             }
         }
-        
+
+        &__max {
+            position: absolute;
+            top: 0px;
+            right: 0px;
+            font-weight: 900;
+
+            &::after {
+                position: absolute;
+                content: 'MAX 24H';
+                top: 1.7em;
+                right: 0px;
+                font-weight: 100;
+                color: var(--color-lighter-grey);
+            }
+        }
+
+        &__graph {
+
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border: 3px solid var(--color-red);
+            border-radius: 50%;
+            height: 600px;
+
+            h1 {
+                font-size: 3rem;
+                position: relative;
+
+                &::before {
+                    content: 'WALLET VALUE';
+                    width: 26ch;
+                    position: absolute;
+                    font-size: 0.4em;
+                    color: var(--color-lighter-grey);
+                    bottom: 5rem;
+                    text-align: center;
+                }
+
+                &::after {
+                    content: '▲ € 31.800,52 (21,1%)';
+                    width: 20ch;
+                    position: absolute;
+                    font-size: 0.4em;
+                    color: var(--color-light-green);
+                    top: 5rem;
+                    left: 4ch;
+                }
+            }
+
+        }
+    }
+
+    &-portfolio {
+        &__title {
+            
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            h2 {
+                font-weight: 100;
+            }
+
+            &__indicators {
+                color: var(--color-lighter-grey);
+                font-size: 0.8rem;
+                word-spacing: 1em;
+            }
+        }
+
+        &__list{
+            display: flex;
+            flex-direction: column;
+            
+            &__item{
+                display: flex;
+                justify-content: space-between;
+                &__icon{
+                    background-color: var(--color-mid-grey);
+                    border-radius: 25%;
+                    width: 75px;
+                    height: 75px;
+                    margin: 10px;
+                    svg{
+                        margin: 12.5px;
+                        width: 50px;
+                        fill: var(--color-white);
+                    }
+                }
+
+                &__name{
+                    margin: 1rem;
+                    font-size: 1.5rem;
+                    line-height: 0rem;
+                    :last-child{
+                        font-size: 0.7em;
+                    }
+                }
+
+                &__graph{
+                    width: 200px;
+                }
+
+                &__price{
+                    text-align: end;
+                    line-height: 0em;
+                    :first-child{
+                        font-size: 1.5em;
+                    }
+                    .red{
+                        color: var(--color-red);
+                    }
+                    .green{
+                        color: var(--color-light-green);
+                    }
+                }
+            }   
+        }
     }
 }
+
 //andrew end
 
 
 //yahya alhawjra-->page exchange
-.wrapperEx{
+.wrapperEx {
     background-color: #2e3137;
     border-radius: 15px;
     padding: 5px;
     width: 600px;
-    
-   select{
-       font-size:x-large;
-   }
- .container{
-    padding: -100px;
-    margin-top: 10px;
-    margin: 2px;
+
+    select {
+        font-size: x-large;
+    }
+
+    .container {
+        padding: -100px;
+        margin-top: 10px;
+        margin: 2px;
+    }
+
+    .card {
+
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        width: 50px;
+        padding: 100px;
+        margin: 5px;
+        position: relative;
+        margin-top: 0px;
+
+
+    }
+
+    h2 {
+        margin: 0 50px;
+        font-size: 50px;
+        color: white;
+    }
+
+    button {
+        border-radius: 50%;
+        width: 4rem;
+        height: 4rem;
+        outline: none;
+        border-style: none;
+        font-size: 50px;
+        background-color: #bababa;
+        box-shadow: 8px 8px 20px #00000027, -8px -8px -20px #969393;
+    }
+
+    button:hover {
+        background-color: aqua;
+        color: red;
+        border-color: #000;
+    }
 }
 
-.card {
-
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    width: 50px;
-    padding: 100px;
-    margin: 5px;
-    position: relative;
-    margin-top: 0px;
-    
-   
-}
-
-h2 {
-    margin: 0 50px;
-    font-size: 50px;
-    color: white;
-}
-
-button {
-    border-radius: 50%;
-    width: 4rem;
-    height: 4rem;
-    outline: none;
-    border-style: none;
-    font-size: 50px;
-    background-color: #bababa;
-    box-shadow: 8px 8px 20px #00000027, -8px -8px -20px #969393;
-}
-
-button:hover {
-    background-color: aqua;
-    color: red;
-    border-color: #000;
-}
-}
-@media only screen and(max-width:350px){
-    .wrapperEx{
+@media only screen and(max-width:350px) {
+    .wrapperEx {
         width: 300px;
     }
 
-    
+
 }
+
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
