--- a/01-HTML-CSS/08-Responsive/michaeldub/mishatemp/style3 copy.scss
+++ b/01-HTML-CSS/08-Responsive/michaeldub/mishatemp/style3 copy.scss
@@ -11,23 +11,6 @@
     border: 1px solid black;
 }
 
-@keyframes wiggle {
-
-    0% {
-        transform: rotate(-10deg);
-    }
-
-    50% {
-        transform: rotate(10deg)
-    }
-
-    100% {
-        transform: rotate(-10deg)
-    }
-
-
-}
-
 // colors and font //
 
 $iconscolor: rgb(72, 69, 69);
@@ -40,16 +23,18 @@ $shadow: 1px 1px 1px #a8a7a7,
 1px 13px 26px rgba(99, 91, 105, 0.4);
 $bgcolor: #f0f1f6;
 
-html {
+html{
     height: 100%;
 }
 
-body {
+body{
     background-color: $bgcolor;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    height: 95%;
     padding: 0.5em;
-
+    // align-items: center;
 }
 
 .bigwrapper {
@@ -58,7 +43,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 900px;
+    height: 880px;
     border-radius: 20px;
     padding: 0.7em;
     font-family: $mainFontFamily;
@@ -91,7 +76,7 @@ body {
     @include flexCenter(space-around, column);
     // @include border();
 
-    height: 100px;
+    height: 12vh;
 
     div {
         height: 20%;
@@ -124,7 +109,7 @@ body {
 
     @include flexCenter(space-between, row);
     // @include border();
-    height: 70px;
+    height: 7vh;
     padding-inline: 0.5em;
 
     div {
@@ -163,13 +148,13 @@ body {
         min-width: 3.5em;
         background: #D8CAE1;
         margin-inline: 0.5em;
-        position: relative;
+        position:relative;
         transition: 0.4s;
         margin-top: 0.5em;
         height: 60%;
-
-
-
+    
+        
+   
 
         div {
             // @include border();
@@ -206,15 +191,6 @@ body {
             &:active {
                 color: rgb(254, 229, 146)
             }
-
-            &:hover {
-
-                transform-origin: center top;
-                animation-name: wiggle;
-                animation-duration: 250ms;
-                animation-iteration-count: infinite;
-                animation-timing-function: ease-in-out;
-            }
         }
 
         .circle {
@@ -241,20 +217,18 @@ body {
             .bell {
                 display: block;
             }
-
-            .circle {
-                display: block;
+            .circle{
+                display:block;
             }
         }
     }
 }
 
-
 .progress {
 
 
     // @include border();
-    height: 120px;
+    height: 12vh;
     padding-inline: 0.5em;
 
     p {
@@ -313,63 +287,61 @@ body {
 
 .image {
 
-    @include flexCenter(center, row);
-    align-items: flex-end;
-    height: 280px;
+   @include flexCenter(center,row);
+   align-items: flex-end;
+    height: 30vh;
 
 
-    img {
-        width: auto;
-        height: 100%;
-    }
-
+   img{
+       width: auto;
+       height: 100%;
+   }
+   
 }
 
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 900px){
 
 
-    body {
+    body{
         align-items: center;
     }
-
-    .bigwrapper {
+    .bigwrapper{
         width: 850px;
     }
-
-    .schetitle {
+    .schetitle{
         justify-content: space-around;
         height: 25vh;
     }
-
-    .schedatebox {
+    .schedatebox{
         height: 5vh;
     }
 
-    .schecards {
+    .schecards{
 
         @include flexCenter(center, row);
         flex-wrap: wrap;
         height: 65vh;
 
-        &__card {
+        &__card{
 
             height: 25%;
             justify-content: space-around;
 
-            div {
+            div{
                 margin-top: 0px;
             }
 
-            &:hover {
+            &:hover{
                 justify-content: space-around;
                 height: 25%;
-
+                
             }
 
-            .circle {
+            .circle{
                 top: -7px;
             }
 
         }
     }
 }
+
