--- a/01-HTML-CSS/09-animations/Andrew/final project/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew/final project/style.scss
@@ -72,34 +72,61 @@ body{
                 color: var(--color-white);
             }
         }
+        --animation-time: 3s;
         &:hover{
+            .header__icon__notification{
+                animation: flop calc(var(--animation-time)/6) forwards ease-in;
+                &__message{
+                    animation: extend 0.6s forwards ease-out;
+                }
+            }
             #note1{
-                animation: flop 1s forwards ease-in;
+                animation-delay: 0s;
+                .header__icon__notification__message{
+                    animation-delay: calc(var(--animation-time)/6);
+                }
             }
             #note2{
-                animation: flop 1s 1s forwards ease-in;
+                animation-delay: calc(var(--animation-time)/6);
+                .header__icon__notification__message{
+                    animation-delay: calc(var(--animation-time)*2/6);
+                }
             }
             #note3{
-                animation: flop 1s 2s forwards ease-in;
+                animation-delay: calc(var(--animation-time)*2/6);
+                .header__icon__notification__message{
+                    animation-delay: calc(var(--animation-time)*3/6);
+                }
             }
             #note4{
-                animation: flop 1s 3s forwards ease-in;
+                animation-delay: calc(var(--animation-time)*3/6);
+                .header__icon__notification__message{
+                    animation-delay: calc(var(--animation-time)*4/6);
+                }
             }
             #note5{
-                animation: flop 1s 4s forwards ease-in;
+                animation-delay: calc(var(--animation-time)*4/6);
+                .header__icon__notification__message{
+                    animation-delay: calc(var(--animation-time)*5/6);
+                }
             }
             #note6{
-                animation: flop 1s 5s forwards ease-in;
+                animation-delay: calc(var(--animation-time)*5/6);
+                .header__icon__notification__message{
+                    animation-delay: var(--animation-time);
+                }
             }
             #shadow{
-                animation: flop-shadow 6s forwards linear;
+                animation:
+                flop-shadow var(--animation-time) forwards linear,
+                //flop-shadow-extend 1s var(--animation-time) forwards ease-out;
             }    
         }
         #shadow{
             z-index: -1;
             position: absolute;
             width: 50px;
-            background-color: black;
+            background-color: rgba(0, 0, 0, 0.9);
             border-radius: 10px;
             top: 55px;
             left: 5px;
@@ -114,32 +141,55 @@ body{
             border-radius: 10px;
             box-shadow: 0px 0px 0px 1px var(--color-light-grey);
             background-color: var(--color-dark-grey);
-            //transform-style: preserve-3d;
             width: 50px;
             height: 50px;
             visibility: hidden;
+            svg{
+                fill: var(--color-white);
+                left: 5px;
+                top: 5px;
+                position: absolute;
+                width: 40px;
+                height: 40px;
+            }
+            &__message{
+                visibility: hidden;
+                height: 50px;
+                width: 300px;
+                background-color: #383C3FD0;
+                border-radius: 10px;
+                box-shadow: 0px 0px 0px 1px var(--color-dark-grey);
+                position: absolute;
+                right: 50px;
+                transform-origin: right;
+                color: var(--color-white);
+                text-align: left;
+                font-size: 1rem;
+                line-height: 50px;
+                padding-left: 10px;
+            }
             &#note1{
                 top: 0px;
                 filter: brightness(1.05);
             }
             &#note2{
-                top: 52px;
+                top: 50px;
                 filter: brightness(1.1);
             }
             &#note3{
-                top: 102px;
+                top: 100px;
                 filter: brightness(1.15);
             }
             &#note4{
-                top: 152px;
+                top: 150px;
                 filter: brightness(1.2);
             }
             &#note5{
-                top: 202px;
+                top: 200px;
                 filter: brightness(1.25);
             }
             &#note6{
-                top: 252px;
+                top: 250px;
                 filter: brightness(1.3);
             }
         }
@@ -168,11 +218,19 @@ body{
     83%{height: 252px;} 93%{height: 300px;}
     100%{height: 302px;} 
 }
+@keyframes flop-shadow-extend{
+    0%{height: 302px;} 
+    100%{height: 302px; width: 350px; transform: translateX(-300px);} 
+}
 @keyframes flop{
     0%{visibility: visible;}
     70%{visibility: visible; transform-origin: bottom; transform: rotateX(-190deg);}
     80%{visibility: visible; transform-origin: bottom; transform: rotateX(-170deg);}
     100%{visibility: visible; transform-origin: bottom; transform: rotateX(-180deg);} 
+}
+@keyframes extend{
+    0%{visibility: visible; transform: scaleX(0) rotateX(180deg);}
+    100%{visibility: visible; transform: scaleX(1) rotateX(180deg);}
 }
 .footer{
     
