--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/popup.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/popup.scss
@@ -15,9 +15,9 @@ button, input[type="submit"], input[type="reset"] {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0);
-    transition: 200ms ease-in-out;
-    border: 1px solid rgb(195, 184, 184);
-    border-radius: 1rem;
+    transition: 200ms ease-out;
+    border: .1px dotted rgb(195, 184, 184);
+    border-radius: .5rem;
     z-index: 10;
     background-color:  #eee;
     width: 500px;
@@ -34,8 +34,8 @@ button, input[type="submit"], input[type="reset"] {
         justify-content: space-between;
         align-items: center;
         border-bottom: 1px solid rgb(195, 184, 184);
-        .title{
-            text-decoration: underline;
+        &-title{
+        text-shadow: 0.15rem 0.25rem rgba(0, 0, 0, 0.2);
             font-size: 1.25rem;
             font-weight: bold;
         }
