--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
@@ -130,6 +130,7 @@ body {
       background: #f0f0f2;
       height: fit-content;
       overflow-y: scroll;
+      list-style: none;
       &:nth-child(1) {
         margin-left: 1.5rem;
       }
@@ -252,6 +253,8 @@ body {
       }
 
       &__text {
+        
+        text-shadow: 0.1rem 0.18rem rgba(0, 0, 0, 0.2);
         padding-inline: 0;
         display: flex;
         flex-direction: column;
