--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
@@ -12,6 +12,8 @@ body {
   background-color: #f0f0f2;
 
   &__dailytasksdone{
+  padding-top: 7vh;
+    margin: auto;
     display: grid;
     grid-template-columns: repeat(5, 80px);
     grid-template-rows:  100px, 200px, 100px;
@@ -27,10 +29,14 @@ body {
     .box2{
       grid-column: 4/6;
       font-weight: 550;
+      text-align: right;
     }
     .box3{
       grid-column: 1/6;
      
+      img{
+        width: 100%;
+      }
     }
     .box{
       border: 2px solid black;
