--- a/01-HTML-CSS/09-animations/OmriAharonov/weather/weather.scss
+++ b/01-HTML-CSS/09-animations/OmriAharonov/weather/weather.scss
@@ -9,7 +9,7 @@ body {
     margin: auto;
     display: grid;
     grid-template-columns: 6fr;
-    grid-template-rows: 1fr 1fr 1fr 0.3fr 1fr 1fr;
+    grid-template-rows: 0.8fr 1.6fr 0.8fr 0.3fr 1fr 1fr;
     color: honeydew;
 
 
@@ -33,6 +33,23 @@ body {
     &__dayTime{
         display: flex;
         flex-direction: column;
+        //border: black solid 1px;
+
+        .ball {
+            width: 150px;
+            height: 150px;
+            border-radius: 100px;
+            background-image: linear-gradient(to bottom right, rgb(16, 176, 250), rgba(247, 0, 255, 0.932));
+            //background-color: rgb(218, 71, 255);
+            margin: auto;
+            // animation-name: rorate;
+            // animation-duration: 3s
+            // animation-delay:1s;
+            // animation-iteration-count:infinite;
+            // animation-direction:reverse ;
+            // animation-timing-function: ease-in-out;
+        }
+    }
 
         .card{
             width: 100px;
@@ -41,9 +58,10 @@ body {
             padding: 0.5%;
             border-radius: 40px;
             margin: auto;
-            background: rgba(101, 43, 167, 0.562);
+            background: rgba(124, 49, 223, 0.295);
         }
-    }
+
+    
 
     &__temp {
         justify-self: center;
