--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
@@ -16,6 +16,7 @@ body {
     padding-top: 1.5rem;
     display: flex;
     flex-direction: column;
+  
 
     .list {
       display: flex;
@@ -27,29 +28,30 @@ body {
         justify-content: space-between;
         align-items: center;
 
+
         .box-logo {
           width: 40px;
           height: 40px;
           border-radius: 50%;
-
-
-          &:nth-child(odd) {
-            background-color: rgb(245, 196, 106);
-          }
-
-          &:nth-child(even) {
-            background-color: rgb(167, 219, 236);
-          }
+          background-color: rgb(245, 196, 106);
 
           i {
             margin-left: 12px;
             margin-top: 12px;
 
           }
+        }
+
+        .box-log-blue {
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
+          background-color: rgb(167, 219, 236);
 
           h {
             margin-top: 12px;
             margin-left: 12px;
+            font-weight: 700;
           }
         }
 
@@ -60,14 +62,12 @@ body {
         p {
           padding: 1.5rem;
         }
-
-
       }
     }
   }
 
   &__dailytasksdone {
-    padding-top: 6vh;
+    padding-top: 4vh;
     margin: auto;
     display: grid;
     grid-template-columns: repeat(5, 80px);
