--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -254,7 +254,7 @@ section{
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   }
   .pot{
-    background: #7a2828;
+    background: #968c8c;
     border-radius: 0px 0px 40px 40px;
     width: 150px;
     height: 50px;
