--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -627,19 +627,32 @@ section{
         background-color: rgb(255, 133, 235);
         border:0;
         border-radius: 100% 0% 100% 100%;
-        transform: rotate(65deg);  
+        transform: rotate(70deg);  
       
     }
     .fourthPetal{
         position:absolute;
         width:100%;
         height:80%;
-        bottom:60%;
-        left:-90%; 
+        bottom:110%;
+        left:-25%; 
         background-color: rgb(255, 133, 235);
         border:0;
         border-radius: 100% 0% 100% 100%;
-        transform: rotate(80deg);  
+        transform: rotate(120deg);  
+      
+    }
+   
+    .fifthPetal{
+        position:absolute;
+        width:100%;
+        height:80%;
+        bottom:90%;
+        left:70%; 
+        background-color: rgb(255, 133, 235);
+        border:0;
+        border-radius: 100% 0% 100% 100%;
+        transform: rotate(170deg);  
       
     }
    
