--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -474,14 +474,15 @@ section{
         position:absolute;
         background-color:green;
         width:1%;
-        height:28%;
-        bottom:-90%;
+        height:15%;
+        bottom:-80%;
         left:50%;
         animation-name: treeGrows;
         animation-duration: 4s;
         animation-timing-function:linear;
         transform-origin:bottom;
-        animation-fill-mode:forwards;
+        animation-fill-mode:both;
+       
         
 
     }
@@ -555,7 +556,7 @@ section{
     .flowerCircle{
         background-color:yellow;
         width:250%;
-        height:20%;
+        height:40%;
         border-radius:50%;
         position:absolute;
         border: 1px orange solid; 
@@ -589,13 +590,13 @@ section{
      @keyframes flowerCircle{
         0%{ transform: scale(0)};
         20%{transform: scale(0)};
-        40%{transform: scale(0.5)};
-        65%{transform: scale(0.5)};        
+        40%{transform: scale(1)};
+        65%{transform: scale(1)};        
         100%{transform: scale(1)};  
 
     }
 
-    .firstPetal{
+    /*.firstPetal{
         position:absolute;
         width:100%;
         height:80%;
@@ -654,7 +655,7 @@ section{
         border-radius: 100% 0% 100% 100%;
         transform: rotate(170deg);  
       
-    }
+    }*/
    
 
 
