--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -470,7 +470,7 @@ section{
 }
 
 .cartgarden{
-    .tree{
+    .maintree{
         position:absolute;
         background-color:green;
         width:1%;
@@ -596,67 +596,6 @@ section{
 
     }
 
-    /*.firstPetal{
-        position:absolute;
-        width:100%;
-        height:80%;
-        bottom:-70%;
-        left:-73%; 
-        background-color: rgb(255, 133, 235);
-        border:0;
-        border-radius: 100% 0% 100% 100%;
-      
-    }
-    .secondPetal{
-        position:absolute;
-        width:100%;
-        height:80%;
-        bottom:-3%;
-        left:-110%; 
-        background-color: rgb(255, 133, 235);
-        border:0;
-        border-radius: 100% 0% 100% 100%;
-        transform: rotate(30deg);  
-      
-    }
-    .thirdPetal{
-        position:absolute;
-        width:100%;
-        height:80%;
-        bottom:60%;
-        left:-100%; 
-        background-color: rgb(255, 133, 235);
-        border:0;
-        border-radius: 100% 0% 100% 100%;
-        transform: rotate(70deg);  
-      
-    }
-    .fourthPetal{
-        position:absolute;
-        width:100%;
-        height:80%;
-        bottom:110%;
-        left:-25%; 
-        background-color: rgb(255, 133, 235);
-        border:0;
-        border-radius: 100% 0% 100% 100%;
-        transform: rotate(120deg);  
-      
-    }
-   
-    .fifthPetal{
-        position:absolute;
-        width:100%;
-        height:80%;
-        bottom:90%;
-        left:70%; 
-        background-color: rgb(255, 133, 235);
-        border:0;
-        border-radius: 100% 0% 100% 100%;
-        transform: rotate(170deg);  
-      
-    }*/
-   
 
 
 
@@ -666,6 +605,23 @@ section{
         bottom:-90%;
         width:100%;
         height:25%;
+    }
+
+
+    .tree2{
+        position:absolute;
+        background-color:green;
+        width:1%;
+        height:5%;
+        bottom:-80%;
+        left:20%;
+        animation-name: treeGrows;
+        animation-duration: 4s;
+        animation-timing-function:linear;
+        transform-origin:bottom;
+        animation-fill-mode:both;
+       
+
     }
 }
 
