--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.css
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.css
@@ -1,33 +1,51 @@
 body {
     background-color: #030203;
+    font-family:  'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;;
+    color: white;
 }
 
 .TopBox {
-   margin-top: 20%;
-   margin-left: 5%;
-   margin-right: 5%;
-    height: 165px;
+    margin-top: 20%;
+    margin-left: 5%;
+    margin-right: 5%;
+    height: 170px;
     background-color: #9966cc;
+    background-image: linear-gradient(to left, #9966cc, #cca1f0);
+    box-shadow: 0px 0px 1px 1px #cca1f0;
     border-radius: 15px;
+
 }
 
 .Box {
     margin-top: 10%;
-    margin-left: 12%;
-    height: 300px;
-    width: 260px;
+    margin-left: 14%;
+    height: 330px;
+    width: 300px;
     background-color: #2a2727;
     border-radius: 15px;
- 
+    box-shadow: 0px 0px 0px 1px #888888;
+
 }
 
 .BoxOptions {
-    margin-top: 6%;
+    margin-top: 8%;
     margin-left: 10%;
     margin-right: 10%;
     display: inline-flex;
     height: 50px;
-    width: 80%;
+    width: 85%;
     background-color: #030203;
-    border-radius: 5px;
+    border-radius: 5px;    
+    
+    
 }
+.BoxOptions>img{
+width: 24px;
+height: 24px;
+display: block;
+margin-left: 15px;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
