--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/john/style.scss
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/john/style.scss
@@ -1,5 +1,6 @@
 body{
-    background-color: #081b25;
+    background-color: hsl(201, 64%, 9%);
+   
 }
 .wrapper{
     display: grid;
@@ -19,27 +20,22 @@ body{
       grid-row: 1;
   
       h1{ 
-          position: relative;
           left:50px;
-      
-        }
+       }
     }
     &__photo {
-      grid-column-start: 2;
-      grid-row-start: 1;
-      grid-row-end: 4;
+      grid-column: 2;
+      grid-row: 1/3
       
     }
     &__degrees {
-      grid-column-start: 1;
-      grid-column-end: 2;
-      grid-row-start: 3;
-      grid-row-end: 3;
+      grid-column:1;
+      grid-row: 2;
       
     }
     &__weather {
       grid-column-start: 1;
-      grid-column-end: 2;
+      grid-column-end: 1;
       grid-row-start: 3;
       background-color: rgb(119, 42, 182);
       width: 120px;
@@ -86,12 +82,17 @@ body{
     top:700px;
     grid-row-gap: 10px;
   }
-.navbar{
-  display: flex;
-  position: sticky;
-  bottom: 1px;
-  justify-content: space-between;
-  &__item1{
-    color: violet;
-  }
-}
+  .bar{
+    
+    margin: auto;
+    padding-top: 50px;
+    padding-left: 70px;
+    padding-bottom: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+      &__icons{
+     #active:target{
+      color: #7b446a;
+     }
+     }
+     }
