--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
@@ -358,6 +358,123 @@
 }
 }
 }
+.details {
+    background: rgba(19, 27, 36, 0.877);
+    max-width: 600px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 6fr;
+    grid-template-rows: 0.8fr 1.6fr 0.8fr 0.3fr 1fr 1fr;
+    color: honeydew;
+
+
+    &__location {
+        margin-top: 20px;
+        display: grid;
+        grid-template-rows: repeat(2 1fr);
+
+        .fas {
+            color: gray;
+            margin: auto;
+        }
+
+        p {
+            justify-self: center;
+            margin-top: -10px;
+        }
+
+    }
+
+    &__dayTime {
+        display: flex;
+        flex-direction: column;
+        //border: black solid 1px;
+
+        .ball {
+            width: 150px;
+            height: 150px;
+            border-radius: 100px;
+            background-image: linear-gradient(to bottom right, rgb(16, 176, 250), rgba(247, 0, 255, 0.932));
+            margin: auto;
+            animation-name: rorate;
+            animation-duration: 3s;
+            animation-delay: 1s;
+            animation-iteration-count: infinite;
+            animation-direction: reverse;
+            animation-timing-function: ease-in-out;
+        }
+
+
+        .card {
+            width: 100px;
+            height: 20px;
+            text-align: center;
+            padding: 0.5%;
+            border-radius: 40px;
+            margin: auto;
+            background: rgba(124, 49, 223, 0.295);
+        }
+    }
+
+    &__temp {
+        justify-self: center;
+        font-size: 3rem;
+    }
+
+    &__current {
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+
+        .data {
+            justify-content: center;
+
+            span {
+                margin-left: 10px;
+            }
+        }
+
+        .fas {
+            color: cornflowerblue;
+        }
+    }
+
+    &__general {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(3 1fr);
+        margin: 0% 15%;
+
+        .measure {
+
+            &_units {
+                justify-self: end;
+                color: rgb(51, 89, 158);
+
+                .fas {
+                    color: honeydew;
+                    font-size: 12px;
+                }
+
+                span {
+                    margin-right: 10px;
+                }
+            }
+        }
+
+
+
+    }
+}
+
+@keyframes rorate{
+    from { 
+        transform: rotate(0deg); 
+    } to { 
+        transform: rotate(360deg); 
+    }
+
+}
 @media only screen and(max-width:600px){
     body{
         max-width: 600px;
