--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
@@ -399,11 +399,17 @@ body {
         display: grid;
         align-content: flex-start;
         width: 90vw;
-        height: fit-content;
+        min-height: fit-content;
+        height: 35vw;
+        min-height: 20vh;
         background-color: white;
         border-radius: 2rem;
         padding: 2vw 0rem 5vw 0rem;
         box-shadow: 0.5 rem 3rem rgba($color: #000000, $alpha: 0.4);
+      @media only screen and (min-width: 600px){
+        min-height: 25vw;
+        height: 30vw;
+      }
       }
 
       &__title {
@@ -458,10 +464,10 @@ body {
 
       &__days {
         width: 90vw;
-        height: 100%;
+        height: 3vw;
         display: grid;
         grid-template-columns: repeat(7, 1fr);
-        grid-template-rows: repeat(5, 3vw);
+        grid-template-rows: repeat(2, 7vw);
         justify-items: center;
         align-items: center;
         grid-gap: 5vw;
@@ -480,7 +486,7 @@ body {
           height: fit-content;
           line-height: 3vh;
           width: fit-content;
-          padding: 1vw 1vw 0.5vw 1vw;
+          padding: 2vw;
           border-radius: 0.25rem;
 
           &:hover {
@@ -490,10 +496,6 @@ body {
               background-color: #918d8d;
               font-weight: bolder;
             }
-          }
-
-          & p {
-            margin: 0;
           }
         }
 
@@ -505,6 +507,7 @@ body {
         .assigned {
           display: flex;
           flex-direction: column;
+          padding: 1.5vw;
 
           column-gap: 0;
           text-align: center;
@@ -513,6 +516,7 @@ body {
           p {
             line-height: 1.5vh;
           }
+          
         }
 
         .today {
@@ -522,7 +526,7 @@ body {
           text-align: center;
           display: flex;
           flex-direction: column;
-          padding: 0.1vw 1vw 0.1vw 1vw;
+          padding: 1.5vw;
         }
       }
     }
